--- a/Controle-PW-Garcia-2022/Exercice2Garcia/MainPageExercice2.html
+++ b/Controle-PW-Garcia-2022/Exercice2Garcia/MainPageExercice2.html
@@ -41,59 +41,32 @@
                     </div>
                         <br>
                         <div class="section">
-                        <h2><div id="Partie1">Expériences professionnelles</div></h2>
-                        <strong>Mars 2022-...</strong>
-                        <p>Juriste Fintech et Cryptoactif, <a href="https://lco.legal" title="Un super cabinet d'avocats !">L.Co Avocats</a> </p>
-                        <ul>
-                            <li>Audit juridique</li>
-                            <li>Tokenomics</li>
-                            <li>Conseils en IP/IT</li>
-                            <li>Levée de fonds : ICO, STO</li>
-                            <li>Conseils en <em>regulatory, compliance</em></li>
-                          </ul>
+                          <h2>Introduction</h2>
+
+                        <p>Maël Pegny, Ph.D, s’intéresse aux conséquences sur la vieprivée de l’usage généralisé de l’Intelligence artificielle. 
+                          Après une introduction faisant état de l’origine historique de la notion de vie privée, entretenant un lien étroit avec les Institutions démocratiques, le conférencier s’est concentrésur les enjeux contemporains. Cette étude sociologique,politique et juridique est faite sous le prisme de l’intelligenceartificielle et de la sous branche du Machine learning.
+                          <br> Ainsi, trois thématiques sont particulièrement étudiées : la surveillance de masse à l’aune des techniques inhérentes àl’intelligence artificielle, la notion d’anonymat à l’ère de lareconnaissance faciale et enfin les conséquences sur notreordre juridique de la démocratisation de l’IA.
+                          Maël Pegny s’est attaché à donner des définitions extensivesdes notions d’intelligence artificielle, de vie privée et dedonnées personnelles. Extensives car le chercheur aprécisément cherché à étendre les notions à différentsmilieux de recherches (sociologie, philosophie politique etsciences de l’informatique).</a> </p>
                           <br>
-                    <p>
-                        <strong>Septembre 2021-Mars 2022</strong>
-                        <br>
-                        Assistant DPO, <a href="https://www.mnhn.fr/fr" title="Un bien bel établissement">Museum National d'Histoire Naturelle</a> <!-- Title = texte lors du survol-->
-                    </p>
-                    <ul>
-                        <li>Mise en conformité RGPD : registre, AIDP...</li>
-                        <li>Conseils juridiques sur le droit du numérique </li>
-                    </ul>
-                    <br>    
-                        <p>
-                        <strong>Mars 2020-Août 2021</strong>
-                        <br>
-                        Juriste junior, <a href="https://hashtagavocats.com" title="Premier amour...">Hashtag Avocats</a>
-                       </p>
-                    <ul>
-                        <li>Pôle Corporate, Pôle IP/IT</li>
-                        <li>Responsable du partenariat LegalTech</li>
-                    </ul>
-                  </div>
-                <div class="section">
-                        <h2><div id="Diplômes">Diplômes</div></h2>
-                        <strong>2021-2023</strong> : Master 1, Droit de l'informatique en alternance, <a href="https://www.u-pec.fr/fr/formation/master-droit-du-numerique-parcours-informatique-et-droit">Université Paris-Est Créteil</a>
-                        <br>
-                        <p></p>
-                        <strong>2021-2022</strong> : Diplôme Universitaire : Droit et Technologie du Numérique, <a href="https://du-dtn.u-paris2.fr/fr">Université Paris II, Panthéon-Assas</a>
-                        <br>
-                        <br>
-                        <strong>2018-2021</strong> : Licence Droit Public-Sciences Politiques,  <a href="https://www.icp.fr/formations/diplomes/licences/licence-droit-parcours-droit-et-science-politique#:~:text=et%20Science%20politique-,Présentation,Licence%20sélective%20et%20sur%20Parcoursup.">Institut Catholique de Paris</a>
-                    <div class="section">
-                        <br>
-                        <h2><div id="Divers">Divers</div></h2>
-                        <ul>
-                          <li>Président de l'association <strong>Solid'ère</strong></li>
-                          <li>Responsable de la Revue IP/IT du DU DTN</li>
-                          <li>Membre du pôle données et cybersécurité à Assas Legal Innovation</li>
-                          <li>Contributeur pôle cryptoactifs à Horizons</li>
-                       </ul>
-                    </div>
-                  </div>
-                </div>
-            </div>
-          </div>           
+                          A ce titre, il convient de définir selon les termes de Maël Pegny ces trois notions phares.
+                          Le chercheur lie la notion de vie privée à celle des Institutions étatiques. Et pour cause, la vie privée est vue parle conférencier comme une série de “victoires” individuellesface à l’Etat. 
+                          Cette sphère privée est constammentmenacée/bousculée par les Institutions, et a fortiori dans le monde numérique 
+                          où notre sphère privée est rarementclairement établie. Concrètement, Maël Pegny définit la vieprivée comme une construction sociale et historique,permettant aux individus de se prémunir face aux atteintesétatiques ou privées. Elle est intimement liée à la démocratie.
+                          <br> Maël Pegny s’est particulièrement intéressé au Machine Learning, une sous-branche de l’Intelligence Artificielle. 
+                          Il le définit comme un programme informatique, un algorithme qui, au lieu de donner des instructions explicites à l’outil pourexécuter une tâche, laisse le système apprendre à partir del’analyse statistique d’un grand nombre d'exemples. On ditsouvent que "les IA ne se programment pas, elles sedressent".
+                          <br> 
+                          <br>
+                          Le chercheur lie intimement la notion deMachine Learning à celle de donnéespersonnelles. Effectivement, développée dansles années 1950, 
+                          l’Intelligence Artificielle subitson premier « hiver », période pendantlaquelle les recherches stagnent. En 2010,l’intelligence artificielle 
+                          connaît un essorformidable, période dite de « l’été du MachineLearning ».
+                          La cause de ce développement exponentiel tire ses racines de l’avènement du Big Data. 
+                          Car le ML se nourrit d’un nombre colossal dedonnées, y compris personnelles, pour être efficace, le Big Data apparaît particulièrementutile à cet effet. 
+                          Défini par la CNIL comme « Le gigantesque volume de données numériquesproduites combiné aux capacités sans cesseaccrues de stockage et à des outils d’analyseen temps réel de plus en plus sophistiqués »,le Big Data dispose de trois caractéristiquesprincipales : volume, variété et vélocité.
+                          Au sens de l’article 4 RGPD, une donnée àcaractère personnel est « toute informationse rapportant à une personne physique 
+                          identifiée ou identifiable ». 
+                          La distinctionidentifiée/identifiable est ici cruciale, elleévacue de facto du champ d’application durèglement les données anonymisées. Ainsi, lesdonnées fournies par le Big Data auxalgorithmes de machine Learning, car ellessont anonymes, devraient satisfaire auxexigences de protection de la vie privée et desdroits des personnes. 
+                          <br> <br>Pour autant, les études de Maël Pegny infirment cette position.
+                    
+                  </div>        
         </body>
 </html>
