--- a/Controle-PW-Garcia-2022/Exercice2Garcia/MainPageExercice2.html
+++ b/Controle-PW-Garcia-2022/Exercice2Garcia/MainPageExercice2.html
@@ -36,8 +36,8 @@
                       <div><a href="partie1.html">Partie 1 : Le Capitalisme de Surveillance </a></div>
                       <div><a href="partie2.html">Partie 2 : Zoom sur la mort de l'anonymat en ligne</a></div> <!-- ancre de renvoi vers les catégories-->
                       <div><a href="partie3.html">Partie 3 : Conséquences légales du machine learning sur les données personnelles</a></div>
-                      <div><a href="#Divers">Conclusion</a></div>
-                      <div><a href="#Divers">Bibliographie</a></div> 
+                      <div><a href="conclusion.html">Conclusion</a></div>
+                      <div><a href="bibliographie.html">Bibliographie</a></div> 
                     </div>
                         <br>
                         <div class="section">
