--- a/Controle-PW-Garcia-2022/Exercice2Garcia/partie1.html
+++ b/Controle-PW-Garcia-2022/Exercice2Garcia/partie1.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <body>
-        <link rel="stylesheet" type="text/css" href="style_div.css"> 
+        <link rel="stylesheet" type="text/css" href="CSS\style_div.css"> 
         <div id="bandeau"><h1>Partie 1 : Le Capitalisme de Surveillance </h1></div>
         <div id="contenu"><p>La professeure émérite à la Harvard Business School, Shoshana Zuboff, popularise avec son livre « L’âge ducapitalisme de surveillance » en 2013 le concept selon lequel le XXIe siècle ouvre au capitalisme, du fait l’hégémonie du numérique, un « nouvel ordre économique qui revendique l’expérience humaine comme matière première gratuite à des fins de pratiques commerciales dissimulées d’extraction, de prédiction et de vente », ce qui constitue un « renversement de la souveraineté du peuple ». <br> <br>
             
