--- a/Controle-PW-Garcia-2022/Exercice2Garcia/partie2.html
+++ b/Controle-PW-Garcia-2022/Exercice2Garcia/partie2.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <body>
             <title>Partie 2 : La mort de l'anonymat en ligne</title>
-        <link rel="stylesheet" type="text/css" href="style_div.css"> 
+        <link rel="stylesheet" type="text/css" href="CSS\style_div.css"> 
         <div id="bandeau"><h1>Partie 2 : La mort de l'anonymat en ligne</h1></div>
         <div id="contenu">
         <p>
