--- a/Controle-PW-Garcia-2022/Exercice2Garcia/conclusion.html
+++ b/Controle-PW-Garcia-2022/Exercice2Garcia/conclusion.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <body>
             <title>Conclusion : Machine Learning et DCP </title>
-        <link rel="stylesheet" type="text/css" href="style_div.css"> 
+        <link rel="stylesheet" type="text/css" href="CSS\style_div.css"> 
         <div id="bandeau"><h1>Conclusion</h1></div>
         <div id="contenu">
         <p>
